--- a/carrito.html
+++ b/carrito.html
@@ -4,20 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Css propio -->
-    <link rel="stylesheet" href="./css/Styles.css" />
-    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/CSS/Styles.css" />
+    <!-- favicon icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- fontawesome cdm -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- family font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <title>Carrito de compras</title>
+
+    <title>Vinoteca G1</title>
   </head>
+
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand ms-4" href="index.html">
             <img
@@ -58,6 +84,12 @@
                   >Contacto</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#nosotros"> Nosotros </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="log.html"> Ingresar </a>
+              </li>
 
               <li class="nav-item me-4">
                 <a class="nav-link" href="carrito.html"
@@ -84,6 +116,7 @@
               <a class="nav-link carrito" href="#">Guardado</a>
             </li>
           </ul>
+          <div class="productos-carro"></div>
         </div>
         <div class="card-body">
           <h5 class="card-title">Tu carrito esta vacio</h5>
@@ -91,55 +124,14 @@
           <a href="#" class="btn btn-dark bg-gradient">Limpiar carrito</a>
         </div>
       </div>
-
-      <!-- JavaScript Bundle with Popper -->
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"
-      ></script>
     </main>
-    <footer>
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient justify-content-around"
-      >
-        <ul class="navbar-nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Vinos</a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Contacto
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Nosotros
-            </a>
-          </li>
-        </ul>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107122.38185809464!2d-68.75747770144187!3d-32.96224342965601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09452c65a90b%3A0x9c458f7ff07ddbb4!2sEstancia%20Mendoza!5e0!3m2!1ses-419!2sar!4v1666360072336!5m2!1ses-419!2sar"
-          width="400"
-          height="250"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </nav>
-    </footer>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/JS/index.js"></script>
   </body>
 </html>
