--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- fontawesome cdm -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- family font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -21,19 +37,13 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
 
     <title>Vinoteca G1</title>
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand ms-4" href="index.html">
             <img
@@ -96,79 +106,20 @@
       </nav>
     </header>
     <main>
-      <div
-        id="carouselExampleControls"
-        class="carousel slide mt-3"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block img-fluid"
-              alt="vino"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="cartavino">Vino 1</h5>
-              <p class="cartavino">Un vino riojano de oferta</p>
-              <button type="button" class="btn btn-dark">
-                Agregar al carrito
-              </button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block img-fluid"
-              alt="vino"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="cartavino">Vino 2</h5>
-              <p class="cartavino">Un vino rosado muy prestigioso</p>
-              <button type="button" class="btn btn-dark">
-                Agregar al carrito
-              </button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/Vinocarta.png"
-              class="rounded mx-auto d-block img-fluid"
-              alt="vino"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="cartavino">Vino 3</h5>
-              <p class="cartavino">
-                Un vino importado como novedad de la semana
-              </p>
-              <button type="button" class="btn btn-dark">
-                Agregar al carrito
-              </button>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev btn btn-secondary"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden"></span>
-        </button>
-        <button
-          class="carousel-control-next btn btn-secondary"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden"></span>
-        </button>
-      </div>
+      <section class="winery col-12">
+        <img
+          class="pic img-fluid"
+          src="/img/sven-wilhelm-2cRXSWyMHA8-unsplash.jpg"
+          alt="winery image"
+        />
+        <h1 class="tit-primario">G1-CAC</h1>
+        <h2 class="tit-secundario">DESDE 2022</h2>
+      </section>
+
       <section class="productos-header col-md-12 mt-3">
         <div class="container-fluid col-md-8">
           <h1 class="d-flex justify-content-center">Nuestros vinos</h1>
+
           <div class="d-flex justify-content-center">
             <button type="button" id="all" class="btn btn-dark btn-vinos me-2">
               Todos nuestros vinos
@@ -194,10 +145,6 @@
             >
               Blanco
             </button>
-            <button><i id="sort-up" class="fa-solid fa-sort-up"></i></button>
-            <button>
-              <i id="sort-down" class="fa-solid fa-sort-down"></i>
-            </button>
           </div>
         </div>
       </section>
@@ -219,72 +166,54 @@
           <div class="col-sm-12 col-lg-5">
             <h2 id="nosotros">Conozca nuestra historia:</h2>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum enim
-              voluptatibus soluta nisi labore, ducimus modi eaque, laudantium
-              itaque, veritatis atque consectetur molestias ut. Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Doloribus tenetur
-              eligendi dolore adipisci. Sapiente nostrum enim voluptatibus
-              soluta nisi labore, ducimus modi eaque, laudantium itaque,
-              veritatis atque consectetur molestias ut. Lorem, ipsum dolor sit
-              amet consectetur adipisicing elit. Doloribus tenetur eligendi
-              dolore adipisci. Sapiente nostrum enim voluptatibus soluta nisi
-              labore, ducimus modi eaque, laudantium itaque, veritatis atque
-              consectetur molestias ut. Lorem, ipsum dolor sit amet consectetur
-              adipisicing elit. Doloribus tenetur eligendi dolore adipisci.
-              Sapiente nostrum enim voluptatibus soluta nisi labore, ducimus
-              modi eaque, laudantium itaque, veritatis atque consectetur
-              molestias ut. Lorem, ipsum dolor sit amet consectetur adipisicing
-              elit. Doloribus tenetur eligendi dolore adipisci. Sapiente nostrum
-              enim voluptatibus soluta nisi labore, ducimus modi eaque,
-              laudantium itaque, veritatis atque consectetur molestias ut.
+              Bodega G1-CAC es un establecimiento vitivinícola ubicado en el
+              departamento de Tupungato, en las altas tierras de Mendoza. En
+              esta región, conocida como Valle de Uco y reconocida como uno de
+              los mejores terruños vitícolas del mundo, es un lugar privilegiado
+              para el cultivo de viñedos y la elaboración de vinos de alta gama.
+              Ubicado a 1.100 msnm, cuenta con suelos pedregosos de buen
+              drenaje, donde los cultivos son rústicos por el crudo verano y los
+              nevados inviernos, y reciben el riego del agua mineralizada de
+              deshielo de la gran cordillera de Los Andes. Los días calurosos y
+              las noches frescas crean las condiciones para que la amplitud
+              térmica llegue hasta los 20ºC en una jornada, la que combinada con
+              la irradiación solar constante en la primavera y verano austral,
+              aportan las condiciones ideales para el logro de excelentes uvas,
+              madres indiscutibles de un gran vino.
             </p>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient justify-content-around"
-      >
-        <ul class="navbar-nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Vinos</a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Contacto
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Nosotros
-            </a>
-          </li>
-        </ul>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107122.38185809464!2d-68.75747770144187!3d-32.96224342965601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09452c65a90b%3A0x9c458f7ff07ddbb4!2sEstancia%20Mendoza!5e0!3m2!1ses-419!2sar!4v1666360072336!5m2!1ses-419!2sar"
-          width="400"
-          height="250"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </nav>
+      <div class="row justify-content-center favi">
+        <div class="col-lg-1">
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div class="col-lg-1">
+          <i class="fa-brands fa-whatsapp"></i>
+        </div>
+        <div class="col-lg-1">
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+      </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107122.38185809464!2d-68.75747770144187!3d-32.96224342965601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09452c65a90b%3A0x9c458f7ff07ddbb4!2sEstancia%20Mendoza!5e0!3m2!1ses-419!2sar!4v1666360072336!5m2!1ses-419!2sar"
+        width="400"
+        height="250"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </footer>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <script src="/JS/index.js"></script>
   </body>
 </html>
